# eliza-chatbot-fastapi

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  fly.toml  main.py  pyproject.toml  requirements.txt
eliza_chatbot_fastapi/: eliza.py  main.py
